--- a/main.lfm
+++ b/main.lfm
@@ -1,28 +1,28 @@
 object mainForm: TmainForm
   Left = 342
-  Height = 950
+  Height = 850
   Top = 31
-  Width = 794
+  Width = 800
   Caption = '40 grafische algoritmes'
-  ClientHeight = 950
-  ClientWidth = 794
+  ClientHeight = 850
+  ClientWidth = 800
   DesignTimePPI = 120
   Menu = MainMenu1
   object pbMain: TPaintBox
     Left = 0
-    Height = 780
+    Height = 680
     Top = 170
-    Width = 794
+    Width = 800
     Align = alClient
   end
   object pnlTop: TPanel
     Left = 0
     Height = 170
     Top = 0
-    Width = 794
+    Width = 800
     Align = alTop
     ClientHeight = 170
-    ClientWidth = 794
+    ClientWidth = 800
     Color = clSilver
     ParentColor = False
     TabOrder = 0
@@ -30,10 +30,10 @@ object mainForm: TmainForm
       Left = 1
       Height = 168
       Top = 1
-      Width = 792
+      Width = 798
       Align = alClient
       ClientHeight = 168
-      ClientWidth = 792
+      ClientWidth = 798
       Color = clMoneyGreen
       ParentColor = False
       TabOrder = 0
@@ -94,10 +94,10 @@ object mainForm: TmainForm
       Left = 1
       Height = 168
       Top = 1
-      Width = 792
+      Width = 798
       Align = alClient
       ClientHeight = 168
-      ClientWidth = 792
+      ClientWidth = 798
       Color = clSkyBlue
       ParentColor = False
       TabOrder = 1
@@ -126,10 +126,10 @@ object mainForm: TmainForm
       Left = 1
       Height = 168
       Top = 1
-      Width = 792
+      Width = 798
       Align = alClient
       ClientHeight = 168
-      ClientWidth = 792
+      ClientWidth = 798
       TabOrder = 2
       Visible = False
       object Label4: TLabel
@@ -175,10 +175,10 @@ object mainForm: TmainForm
       Left = 1
       Height = 168
       Top = 1
-      Width = 792
+      Width = 798
       Align = alClient
       ClientHeight = 168
-      ClientWidth = 792
+      ClientWidth = 798
       Color = clGradientActiveCaption
       ParentColor = False
       TabOrder = 3
@@ -287,10 +287,10 @@ object mainForm: TmainForm
       Left = 1
       Height = 168
       Top = 1
-      Width = 792
+      Width = 798
       Align = alClient
       ClientHeight = 168
-      ClientWidth = 792
+      ClientWidth = 798
       TabOrder = 4
       Visible = False
       object Label10: TLabel
@@ -366,6 +366,47 @@ object mainForm: TmainForm
         Value = -10
       end
     end
+    object pnlBloem: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 798
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 798
+      TabOrder = 5
+      Visible = False
+      object rgFormuleBloem: TRadioGroup
+        Left = 32
+        Height = 131
+        Top = 8
+        Width = 544
+        AutoFill = True
+        Caption = 'Formules'
+        ChildSizing.LeftRightSpacing = 6
+        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+        ChildSizing.EnlargeVertical = crsHomogenousChildResize
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 2
+        ClientHeight = 106
+        ClientWidth = 540
+        Columns = 2
+        Items.Strings = (
+          '1 =  Cos(4*P)'
+          '2 = Cos(5*P)'
+          '3 = Cos(4 * Sin(5 * P))'
+          '4 = Sin(4 * Cos(5 * P))'
+          '5 = Cos(3 * Tan(5 * P))'
+          '6 = Sin(3 * Tan(5 * P))'
+          '7 = Sin(4*P)'
+          '8 = Sin(5*P)'
+        )
+        OnSelectionChanged = miBloemenClick
+        TabOrder = 0
+      end
+    end
   end
   object MainMenu1: TMainMenu
     Left = 416
@@ -418,6 +459,10 @@ object mainForm: TmainForm
       object miWillekeurigeFunctie: TMenuItem
         Caption = 'Willekeurige Functie'
         OnClick = miWillekeurigeFunctieClick
+      end
+      object miBloemen: TMenuItem
+        Caption = 'miBloemen'
+        OnClick = miBloemenClick
       end
     end
   end
