--- a/lib/x86_64-win64/main.lfm
+++ b/lib/x86_64-win64/main.lfm
@@ -394,14 +394,15 @@ object mainForm: TmainForm
         ClientWidth = 540
         Columns = 2
         Items.Strings = (
-          '1 =  Cos(4*P)'
-          '2 = Cos(5*P)'
+          '1 = Cos(4 * P)'
+          '2 = Cos(5 * P)'
           '3 = Cos(4 * Sin(5 * P))'
           '4 = Sin(4 * Cos(5 * P))'
           '5 = Cos(3 * Tan(5 * P))'
           '6 = Sin(3 * Tan(5 * P))'
-          '7 = Sin(4*P)'
-          '8 = Sin(5*P)'
+          '7 = Sin(4 * P)'
+          '8 = Sin(5 * P)'
+          '9 = Sin(5 * Cos(2 * Sin(3 * Cos(4 * P))))'
         )
         OnSelectionChanged = miBloemenClick
         TabOrder = 0
@@ -461,8 +462,12 @@ object mainForm: TmainForm
         OnClick = miWillekeurigeFunctieClick
       end
       object miBloemen: TMenuItem
-        Caption = 'miBloemen'
+        Caption = 'Bloemen'
         OnClick = miBloemenClick
+      end
+      object miBloemen2: TMenuItem
+        Caption = 'Bloemen2'
+        OnClick = miBloemen2Click
       end
     end
   end
