--- a/main.lfm
+++ b/main.lfm
@@ -172,118 +172,6 @@ object mainForm: TmainForm
         ParentColor = False
       end
     end
-    object pnlContinuFunctie: TPanel
-      Left = 1
-      Height = 168
-      Top = 1
-      Width = 798
-      Align = alClient
-      ClientHeight = 168
-      ClientWidth = 798
-      Color = clGradientActiveCaption
-      ParentColor = False
-      TabOrder = 3
-      Visible = False
-      object seLinker: TSpinEdit
-        Left = 32
-        Height = 28
-        Top = 48
-        Width = 63
-        MaxValue = 20
-        MinValue = -30
-        OnChange = miContinuFunctieClick
-        TabOrder = 0
-        Value = -15
-      end
-      object seRechter: TSpinEdit
-        Left = 32
-        Height = 28
-        Top = 120
-        Width = 63
-        MaxValue = 30
-        MinValue = -20
-        OnChange = miContinuFunctieClick
-        TabOrder = 1
-        Value = 20
-      end
-      object Label6: TLabel
-        Left = 32
-        Height = 20
-        Top = 10
-        Width = 135
-        Caption = 'Linker interval grens:'
-        ParentColor = False
-      end
-      object Label7: TLabel
-        Left = 32
-        Height = 20
-        Top = 91
-        Width = 146
-        Caption = 'Rechter interval grens:'
-        ParentColor = False
-      end
-      object Label8: TLabel
-        Left = 248
-        Height = 20
-        Top = 10
-        Width = 124
-        Caption = 'Grootste Y-waarde'
-        ParentColor = False
-      end
-      object Label9: TLabel
-        Left = 248
-        Height = 20
-        Top = 96
-        Width = 119
-        Caption = 'Kleinste Y-waarde'
-        ParentColor = False
-      end
-      object seGrootsteY: TSpinEdit
-        Left = 248
-        Height = 28
-        Top = 48
-        Width = 63
-        MaxValue = 20
-        OnChange = miContinuFunctieClick
-        TabOrder = 2
-      end
-      object seKleinsteY: TSpinEdit
-        Left = 248
-        Height = 28
-        Top = 120
-        Width = 63
-        MinValue = -20
-        OnChange = miContinuFunctieClick
-        TabOrder = 3
-      end
-      object rgFormule: TRadioGroup
-        Left = 544
-        Height = 131
-        Top = 10
-        Width = 231
-        AutoFill = True
-        Caption = 'Formule'
-        ChildSizing.LeftRightSpacing = 6
-        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-        ChildSizing.EnlargeVertical = crsHomogenousChildResize
-        ChildSizing.ShrinkHorizontal = crsScaleChilds
-        ChildSizing.ShrinkVertical = crsScaleChilds
-        ChildSizing.Layout = cclLeftToRightThenTopToBottom
-        ChildSizing.ControlsPerLine = 1
-        ClientHeight = 106
-        ClientWidth = 227
-        ItemIndex = 0
-        Items.Strings = (
-          '1 :  y=Exp(-0.1*x)*Cos(x)'
-          '2 :  y=Sin(x)'
-          '3 : y=x*x'
-          '4 : y=Exp(x)'
-          '5 : y=x*x*x-2*x*x-x'
-        )
-        OnClick = miContinuFunctieClick
-        TabOrder = 4
-      end
-    end
     object pnlWillekFunc: TPanel
       Left = 1
       Height = 168
@@ -483,10 +371,424 @@ object mainForm: TmainForm
         ParentColor = False
       end
     end
+    object pnlFuncFPhi: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 798
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 798
+      TabOrder = 7
+      Visible = False
+      object Label14: TLabel
+        Left = 51
+        Height = 20
+        Top = 16
+        Width = 120
+        Caption = 'Linkergrens voor x'
+        ParentColor = False
+      end
+      object Label15: TLabel
+        Left = 51
+        Height = 20
+        Top = 95
+        Width = 131
+        Caption = 'Rechtergrens voor x'
+        ParentColor = False
+      end
+      object Label16: TLabel
+        Left = 232
+        Height = 20
+        Top = 16
+        Width = 122
+        Caption = 'Bovengrens voor y'
+        ParentColor = False
+      end
+      object Label17: TLabel
+        Left = 232
+        Height = 20
+        Top = 95
+        Width = 122
+        Caption = 'Ondergrens voor y'
+        ParentColor = False
+      end
+      object seA: TSpinEdit
+        Left = 51
+        Height = 28
+        Top = 47
+        Width = 63
+        MaxValue = -1
+        MinValue = -10
+        OnChange = miFuncFPhiClick
+        TabOrder = 0
+        Value = -2
+      end
+      object seB: TSpinEdit
+        Left = 51
+        Height = 28
+        Top = 128
+        Width = 63
+        MaxValue = 10
+        MinValue = 1
+        OnChange = miFuncFPhiClick
+        TabOrder = 1
+        Value = 2
+      end
+      object seHP: TSpinEdit
+        Left = 232
+        Height = 28
+        Top = 48
+        Width = 63
+        MaxValue = 10
+        MinValue = 1
+        OnChange = miFuncFPhiClick
+        TabOrder = 2
+        Value = 2
+      end
+      object seLP: TSpinEdit
+        Left = 232
+        Height = 28
+        Top = 128
+        Width = 63
+        MaxValue = -1
+        MinValue = -10
+        OnChange = miFuncFPhiClick
+        TabOrder = 3
+        Value = -2
+      end
+      object rgFuncFPhi: TRadioGroup
+        Left = 400
+        Height = 95
+        Top = 16
+        Width = 320
+        AutoFill = True
+        Caption = 'Formules'
+        ChildSizing.LeftRightSpacing = 6
+        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+        ChildSizing.EnlargeVertical = crsHomogenousChildResize
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 1
+        ClientHeight = 70
+        ClientWidth = 316
+        ItemIndex = 0
+        Items.Strings = (
+          '(Sin(3*p/2))/(1-2*Cos(p))'
+          '(4*Sin(1.5*p+2)/(Cos(p)*(1+(Cos(3*p))/3) '
+        )
+        OnClick = miFuncFPhiClick
+        TabOrder = 4
+      end
+    end
+    object pnlLissajous: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 798
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 798
+      TabOrder = 8
+      Visible = False
+      object Label18: TLabel
+        Left = 27
+        Height = 20
+        Top = 14
+        Width = 17
+        Caption = 'K1'
+        ParentColor = False
+      end
+      object seK1: TSpinEdit
+        Left = 27
+        Height = 28
+        Top = 47
+        Width = 63
+        Increment = 10
+        MaxValue = 400
+        OnChange = miLissajousClick
+        TabOrder = 0
+        Value = 100
+      end
+      object Label19: TLabel
+        Left = 27
+        Height = 20
+        Top = 90
+        Width = 15
+        Caption = 'F1'
+        ParentColor = False
+      end
+      object Label20: TLabel
+        Left = 144
+        Height = 20
+        Top = 14
+        Width = 17
+        Caption = 'K2'
+        ParentColor = False
+      end
+      object Label21: TLabel
+        Left = 144
+        Height = 20
+        Top = 90
+        Width = 15
+        Caption = 'F2'
+        ParentColor = False
+      end
+      object Label22: TLabel
+        Left = 264
+        Height = 20
+        Top = 14
+        Width = 16
+        Caption = 'P1'
+        ParentColor = False
+      end
+      object seF1: TSpinEdit
+        Left = 27
+        Height = 28
+        Top = 120
+        Width = 63
+        MaxValue = 100
+        OnChange = miLissajousClick
+        TabOrder = 1
+        Value = 16
+      end
+      object seK2: TSpinEdit
+        Left = 144
+        Height = 28
+        Top = 48
+        Width = 63
+        Increment = 10
+        MaxValue = 400
+        OnChange = miLissajousClick
+        TabOrder = 2
+      end
+      object seF2: TSpinEdit
+        Left = 144
+        Height = 28
+        Top = 120
+        Width = 63
+        MaxValue = 100
+        OnChange = miLissajousClick
+        TabOrder = 3
+      end
+      object seP1: TSpinEdit
+        Left = 264
+        Height = 28
+        Top = 48
+        Width = 63
+        Increment = 5
+        MaxValue = 100
+        OnChange = miLissajousClick
+        TabOrder = 4
+      end
+      object seP3: TSpinEdit
+        Left = 264
+        Height = 28
+        Top = 120
+        Width = 63
+        Increment = 5
+        OnChange = miLissajousClick
+        TabOrder = 5
+        Value = 35
+      end
+      object seK3: TSpinEdit
+        Left = 376
+        Height = 28
+        Top = 48
+        Width = 63
+        Increment = 10
+        MaxValue = 400
+        OnChange = miLissajousClick
+        TabOrder = 6
+        Value = 100
+      end
+      object seF3: TSpinEdit
+        Left = 376
+        Height = 28
+        Top = 118
+        Width = 63
+        MaxValue = 100
+        OnChange = miLissajousClick
+        TabOrder = 7
+        Value = 17
+      end
+      object Label23: TLabel
+        Left = 264
+        Height = 20
+        Top = 91
+        Width = 16
+        Caption = 'P3'
+        ParentColor = False
+      end
+      object Label24: TLabel
+        Left = 376
+        Height = 20
+        Top = 14
+        Width = 17
+        Caption = 'K3'
+        ParentColor = False
+      end
+      object Label25: TLabel
+        Left = 376
+        Height = 20
+        Top = 91
+        Width = 15
+        Caption = 'F3'
+        ParentColor = False
+      end
+      object Label26: TLabel
+        Left = 480
+        Height = 20
+        Top = 17
+        Width = 17
+        Caption = 'K4'
+        ParentColor = False
+      end
+      object Label27: TLabel
+        Left = 480
+        Height = 20
+        Top = 88
+        Width = 15
+        Caption = 'F4'
+        ParentColor = False
+      end
+      object seK4: TSpinEdit
+        Left = 480
+        Height = 28
+        Top = 47
+        Width = 63
+        Increment = 10
+        MaxValue = 400
+        OnChange = miLissajousClick
+        TabOrder = 8
+      end
+      object seF4: TSpinEdit
+        Left = 480
+        Height = 28
+        Top = 120
+        Width = 63
+        MaxValue = 100
+        OnChange = miLissajousClick
+        TabOrder = 9
+      end
+    end
+    object pnlContinuFunctie: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 798
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 798
+      Color = clGradientActiveCaption
+      ParentColor = False
+      TabOrder = 3
+      Visible = False
+      object seLinker: TSpinEdit
+        Left = 32
+        Height = 28
+        Top = 48
+        Width = 63
+        MaxValue = 20
+        MinValue = -30
+        OnChange = miContinuFunctieClick
+        TabOrder = 0
+        Value = -15
+      end
+      object seRechter: TSpinEdit
+        Left = 32
+        Height = 28
+        Top = 120
+        Width = 63
+        MaxValue = 30
+        MinValue = -20
+        OnChange = miContinuFunctieClick
+        TabOrder = 1
+        Value = 20
+      end
+      object Label6: TLabel
+        Left = 32
+        Height = 20
+        Top = 10
+        Width = 135
+        Caption = 'Linker interval grens:'
+        ParentColor = False
+      end
+      object Label7: TLabel
+        Left = 32
+        Height = 20
+        Top = 91
+        Width = 146
+        Caption = 'Rechter interval grens:'
+        ParentColor = False
+      end
+      object Label8: TLabel
+        Left = 248
+        Height = 20
+        Top = 10
+        Width = 124
+        Caption = 'Grootste Y-waarde'
+        ParentColor = False
+      end
+      object Label9: TLabel
+        Left = 248
+        Height = 20
+        Top = 96
+        Width = 119
+        Caption = 'Kleinste Y-waarde'
+        ParentColor = False
+      end
+      object seGrootsteY: TSpinEdit
+        Left = 248
+        Height = 28
+        Top = 48
+        Width = 63
+        MaxValue = 20
+        OnChange = miContinuFunctieClick
+        TabOrder = 2
+      end
+      object seKleinsteY: TSpinEdit
+        Left = 248
+        Height = 28
+        Top = 120
+        Width = 63
+        MinValue = -20
+        OnChange = miContinuFunctieClick
+        TabOrder = 3
+      end
+      object rgFormule: TRadioGroup
+        Left = 544
+        Height = 131
+        Top = 10
+        Width = 231
+        AutoFill = True
+        Caption = 'Formule'
+        ChildSizing.LeftRightSpacing = 6
+        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+        ChildSizing.EnlargeVertical = crsHomogenousChildResize
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 1
+        ClientHeight = 106
+        ClientWidth = 227
+        ItemIndex = 0
+        Items.Strings = (
+          '1 :  y=Exp(-0.1*x)*Cos(x)'
+          '2 :  y=Sin(x)'
+          '3 : y=x*x'
+          '4 : y=Exp(x)'
+          '5 : y=x*x*x-2*x*x-x'
+        )
+        OnClick = miContinuFunctieClick
+        TabOrder = 4
+      end
+    end
   end
   object MainMenu1: TMainMenu
-    Left = 416
-    Top = 56
+    Left = 696
+    Top = 48
     object MenuItem1: TMenuItem
       Caption = 'Programma 1-10'
       object miDiagWeb: TMenuItem
@@ -555,6 +857,14 @@ object mainForm: TmainForm
       object miSpiralen: TMenuItem
         Caption = 'Spiralen'
         OnClick = miSpiralenClick
+      end
+      object miFuncFPhi: TMenuItem
+        Caption = 'Grafiek van de functie R=f(Phi)'
+        OnClick = miFuncFPhiClick
+      end
+      object miLissajous: TMenuItem
+        Caption = 'Lissajous figuur'
+        OnClick = miLissajousClick
       end
     end
   end
